# ezbids-cli

./: .gitignore  README.md  index.html  pyproject.toml
.github/workflows/: demo-notebook.yml
notebooks/: demo_ukb_dicoms.ipynb
src/ezbids_cli/: __init__.py  __main__.py  cli.py
src/ezbids_cli/config/: __init__.py  exporter.py
src/ezbids_cli/convert/: __init__.py  converter.py
src/ezbids_cli/core/: __init__.py  analyzer.py  dataset.py  entities.py  identification.py  models.py
src/ezbids_cli/data/: __init__.py
src/ezbids_cli/preprocess/: __init__.py  dcm2niix.py
src/ezbids_cli/schema/: __init__.py  _bst_adapter.py  _cache.py  _validation.py
src/ezbids_cli/tui/: __init__.py  app.py
src/ezbids_cli/validation/: __init__.py  validator.py
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py
